# pytribeam

./: .coverage  .coveragerc  .gitignore  .python-versions  CITATION.cff  CONTRIBUTING.md  Dockerfile.docs  GUI.ps1  NOTICE.md  README.md  book.toml  gh-pages_content_guide.md  index.html  install.bat  install_uv.bat  local_ci.py  local_ci.sh  preflight.py  pyproject.toml  pytest.ini  pytribeam_install.bat
.github/workflows/: _dep_publish.txt  bootstrap-python-ci-package.yml  ci.yml  prepare-release.yml  publish-docs-image.yml  publish.yml  release.yml  test-docker.yml  test.yml
coverage_reports/: .gitignore
coverage_reports/combined/: .coverage  coverage.xml
coverage_reports/combined/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_6de21f327a806ac1___init___py.html  z_6de21f327a806ac1_command_line_py.html  z_6de21f327a806ac1_constants_py.html  z_6de21f327a806ac1_factory_py.html  z_6de21f327a806ac1_fib_py.html  z_6de21f327a806ac1_image_py.html  z_6de21f327a806ac1_insertable_devices_py.html  z_6de21f327a806ac1_laser_py.html  z_6de21f327a806ac1_log_py.html  z_6de21f327a806ac1_stage_py.html  z_6de21f327a806ac1_types_py.html  z_6de21f327a806ac1_utilities_py.html  z_6de21f327a806ac1_workflow_py.html
coverage_reports/hardware/: coverage.xml
coverage_reports/simulator/: coverage.xml
dev/docs/api/: index.html  pytribeam.html  search.js
dev/docs/api/assets/: pdoc-custom.css  pdoc-theme-toggle.js
dev/docs/api/pytribeam/: command_line.html  constants.html  fib.html  insertable_devices.html  laser.html  log.html  types.html  utilities.html  workflow.html
dev/docs/userguide/book/: 404.html  contributing.html  index.html  print.html  searchindex.js  toc.html  toc.js
dev/reports/coverage/: index.html
dev/reports/coverage/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_165a5b07acae0139_badge_lint_py.html  z_165a5b07acae0139_report_badges_py.html  z_165a5b07acae0139_report_coverage_py.html  z_165a5b07acae0139_report_dashboard_py.html  z_165a5b07acae0139_report_lint_py.html  z_165a5b07acae0139_utilities_py.html  z_31ca2f98ac05e4d1___init___py.html  z_3dbda4a2c8320a3e___init___py.html  z_3dbda4a2c8320a3e__version_py.html  z_3dbda4a2c8320a3e_command_line_py.html  z_3dbda4a2c8320a3e_constants_py.html  z_3dbda4a2c8320a3e_email_py.html  z_3dbda4a2c8320a3e_factory_py.html  z_3dbda4a2c8320a3e_fib_py.html  z_3dbda4a2c8320a3e_image_py.html  z_3dbda4a2c8320a3e_insertable_devices_py.html  z_3dbda4a2c8320a3e_laser_py.html  z_3dbda4a2c8320a3e_log_py.html  z_3dbda4a2c8320a3e_stage_py.html  (+18 more)
dev/reports/lint/: index.html
docs/api/: pytribeam.html  search.js
docs/api/pytribeam/: command_line.html  constants.html  factory.html  fib.html  image.html  insertable_devices.html  laser.html  log.html  stage.html  sum.html  types.html  utilities.html  workflow.html
docs/developers/: gh-pages_content_guide.md  potential_forward_plan.md  release_plan.md  running_tests.md
docs/pdoc-theme/: pdoc-custom.css
docs/userguide/: book.toml
docs/userguide/book/: index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/userguide/src/: README.md  SUMMARY.md  contributing.md
main/reports/coverage/: index.html
main/reports/lint/: index.html
src/: 2026-07-14-summary.txt
src/pytribeam/: __init__.py  _package_metadata.py  _version.py  command_line.py  constants.py  doc_examples.py  email.py  factory.py  fib.py  image.py  insertable_devices.py  laser.py  log.py  stage.py  types.py  utilities.py  workflow.py
src/pytribeam/GUI/: __init__.py  runner.py  state_recorder.py  state_recorder_background.py  state_recorder_dev.md
src/pytribeam/cicd/: badge_lint.py  report_badges.py  report_coverage.py  report_dashboard.py  report_lint.py  utilities.py
src/pytribeam/external_oem/: README.md  com.py
src/pytribeam/mcp/: __init__.py  adapters.py  image_tools.py  server.py  state.py
tests/: conftest.py  test__package_metadata.py  test_command_line.py  test_constants.py  test_example.py  test_factory.py  test_fib.py  test_gui_app_resources.py  test_gui_config_manager.py  test_gui_editor_controller.py  test_gui_errors.py  test_gui_experiment_controller.py  test_gui_logging_config.py  test_gui_lookup.py  test_gui_microscope_interface.py  test_gui_parameter_tracker.py  test_gui_pipeline_model.py  test_gui_threading_utils.py  test_gui_validator.py  test_image.py  test_insertable_devices.py  test_laser.py  test_log.py  test_stage.py  test_types.py  test_utilities.py  test_workflow.py
tests/bruker/: conftest.py  helpers.py
tests/bruker/hardware/: test_detector_motion_hardware.py
tests/bruker/integration/: test_bcf_integration.py  test_ebsd_exports.py  test_ebsd_integration.py  test_eds_intergation.py  test_hymap_image_integration.py  test_session_integration.py
tests/bruker/unit/: test_detector_motion.py  test_eds.py  test_session.py  test_types.py
tests/cicd/: test_badge_lint.py  test_badges.py  test_report_dashboard.py  test_reports.py  test_utilities.py
tests/files/: Test_Log.h5  config.ini  config.yml  custom_config.yml  ebsd_config.yml  fib_config.yml  fib_image.tif  fib_mask.tif  fib_stream_config.yml  fib_stream_recipe.py  general_config.yml  image_config.yml  image_config_custom_resolution.yml  image_insertable_config.yml  image_test_exp.yml  laser_config.yml  multi_quad_image.py  short_config.yml  test_config.yml  test_experiment.yml
tests/files/temp/: log.h5  temp.yml
tests/gui/: test_gui_config_manager.py  test_gui_editor_controller.py  test_gui_lookup.py  test_gui_microscope_interface.py  test_gui_threading_utils.py  test_gui_validator.py
wheelhouse/: anybadge-1.16.0-py3-none-any.whl  astroid-3.2.4-py3-none-any.whl  black-24.2.0-cp38-cp38-win_amd64.whl  coverage-7.5.1-cp38-cp38-win_amd64.whl  hatch_vcs-0.4.0-py3-none-any.whl  interrogate-1.7.0-py3-none-any.whl  pdoc-14.7.0-py3-none-any.whl  pylint-3.2.7-py3-none-any.whl  pylint_exit-1.2.0-py2.py3-none-any.whl  requirements_4.11.txt  requirements_4.8.1.txt  setuptools_scm-6.4.0-py3-none-any.whl
wheelhouse/deprecated/: vcs_versioning-0.0.1-py3-none-any.whl
(+178 files in other folders)
