[build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pytribeam"
# version = "0.0.2"
dynamic = ["version"]  # Removed static version, now determined by VCS
description = "automated data collection on TriBeam tools"
requires-python = ">=3.8.12,<3.9"
readme = "README.md"
authors = [
  { name="Andrew Polonsky", email="apolon@sandia.gov" },
  { name="Chad Hovey", email="chovey@sandia.gov" },
  { name="James Lamb", email="jdlamb@sandia.gov" },
]

dependencies = [
    "schema",
]

[project.optional-dependencies]
dev = [
    # "black", # now handled by ruff
    #"docstr-coverage",
    #"docutils<0.18,>=0.14",
    # "flake8",  # now handled by ruff
    #"jinja2",
    #"nbsphinx",
    #"pdbp",
    # "pycodestyle",  # now handled by ruff
    "h5py",
    "numpy",
    "yaml",
    "pdoc",
    "pylint",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "anybadge",
    "pylint",
    "pylint-exit",
    "interrogate",
    "ruff",
]

# pdoc configuration
# we only build pdoc on the source code, so we can ignore the tests and GUI for doc coverage
# [docstr-coverage]
# ignore = [
#     "tests/",
#     "src/pytribeam/GUI/",
# ]

# CLI Entry Points
# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
[project.scripts]
pytribeam="pytribeam.command_line:pytribeam"
pytribeam_info ="pytribeam.command_line:module_info"
pytribeam_gui="pytribeam.command_line:launch_gui"
pytribeam_exp="pytribeam.command_line:run_experiment"

[project.urls]
documentation = "https://sandialabs.github.io/pytribeam/docs/userguide/book/index.html"
repository = "https://github.com/sandialabs/pytribeam"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # Ensures clean versions like 0.0.9 instead of 0.0.9+g1234567

[tool.hatch.build.targets.wheel]
packages = ["src/pytribeam"]

[tool.hatch.build.hooks.vcs]
version-file = "src/pytribeam/_version.py"  # File to be generated when compiled
# By creating the _version.py file, pytrieam can access its own version number at
# runtime (typically from ._version import __version__) without needing to query
# the Git repo or metadata present on the user's system.

# [tool.ruff]
# line-length = 88
# target-version = ["py38"]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/pytribeam --cov-report=xml --cov-report=html"
markers = [
    "detached: test is always runnable and does not require AutoScript or hardware",
    "simulated: test requires a simulated/offline microscope system",
    "hardware: test requires a physical hardware system",
    "laser_hardware: test requires a physical hardware system with laser support",
]
